# glorious-dev

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  MANIFEST.in  Makefile  README.md  pyproject.toml  rust-toolchain.toml  setup.py  tox.ini
.github/workflows/: build.yml
arithmetic_coding_demo/: Cargo.toml
arithmetic_coding_demo/src/: main.rs
compression/: arithmetic_coding.py  test_arithmetic_encoding.py
examples/: compress_image.py
rust_code/: Cargo.toml
rust_code/src/: arithmetic_coding.rs  lib.rs  probability.rs
scripts/: autocommit.py  generate_tree.py
src/compression/bindings/: arithmetic_coding_bindings.c  arithmetic_coding_bindings.pyi
src/compression/c/include/: arithmetic_coding.h  probability.h
src/glorious/: __init__.py
src/glorious/bindings/: __init__.py  arithmetic_coding_bindings.c  arithmetic_coding_bindings.h
src/glorious/c/include/: arithmetic_coding.h  context.h  probability.h  utilities.h
src/glorious/c/src/: arithmetic_coding.c  main.c  probability.c  utilities.c
tests/: test_bindings.py
