[tool.poetry]
name = "glorious"
version = "1.0.0"
description = "Python bindings for Arithmetic Coding with Context"
authors = ["Andy Chen <your.email@example.com>"]
packages = [{ include = "glorious", from = "src" }]
readme = "README.md"
homepage = "https://github.com/mister-brain/glorious"
repository = "https://github.com/mister-brain/glorious"
keywords = ["arithmetic coding", "compression", "C", "Python", "bindings"]

[tool.poetry.dependencies]
python = ">=3.9.0"
openai = "^1.45.0"
pathspec = "^0.12.1"
pygments = "^2.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-metadata = "^3.1.1"
pre-commit = "^2.20.0"
tox = "^4.19.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
requests = "^2.31.0"
Pillow = "^10.0.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
generate-tree = "scripts.generate_tree:main"
ai_commit = "scripts.autocommit:main"

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"
