[package]
name = "rust_code"
version = "0.1.0"
edition = "2021"
description = "Arithmetic coding implementation in Rust."

[dependencies]
contracts = "0.6"

[dev-dependencies]
rand = "0.8"     # For random number generation in tests
proptest = "1.3" # For property-based testing

# Note: The workspace section has been removed as per your comment
